--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🪚</text></svg>">
   </head>
   <body>
+    <ul>
+      <li>Close Account <a href="/close_account/v1">v1</a> <a href="/close_account/v2">v2</a></li>
+      <li><a href="/custom_exports">Custom Exports</a></li>
+      <li><a href="/filters">Filters</a></li>
+      <li><a href="/preact_dnd">Preact Drag N Drop</a></li>
+    </ul>
   </body>
 </html>
