--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li>Close Account <a href="/close_account/v1">v1</a> <a href="/close_account/v2">v2</a></li>
       <li><a href="/custom_exports">Custom Exports</a></li>
       <li><a href="/filters">Filters</a></li>
+      <li><a href="/porchlight_grids">Porchlight Grids</a></li>
       <li><a href="/preact_dnd">Preact Drag N Drop</a></li>
     </ul>
   </body>
