--- a/filters/index.html
+++ b/filters/index.html
@@ -3,13 +3,6 @@
   <head>
     <meta name="robots" content="noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Filters prototype</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🪚</text></svg>">
-    <link rel="stylesheet" href="pds.css">
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" type="module"></script>  
+    <meta http-equiv="refresh" content="0; URL='v2/'">
   </head>
-  <body>
-    <div id="root" class="pds-p-xl pds-flex pds-gap-sm"></div>
-  </body>
 </html>
