--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li>Close Account <a href="close_account/v1">v1</a> <a href="close_account/v2">v2</a></li>
       <li><a href="custom_exports/">Custom Exports</a></li>
       <li>Filters <a href="filters/v1">v1</a> <a href="filters/v2">v2</a></li>
+      <li><a href="historical_rates/">Historical Rates</a></li>
       <li><a href="porchlight_grids/">Porchlight Grids</a></li>
       <li><a href="preact_dnd/">Preact Drag N Drop</a></li>
     </ul>
