--- a/historical_rates/v1/index.html
+++ b/historical_rates/v1/index.html
@@ -4,7 +4,7 @@
     <meta name="robots" content="noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🪚</text></svg>">
-    <link rel="stylesheet" href="pds.css">
+    <link rel="stylesheet" href="https://porchlight.design/porchlight.css">
     <link rel="stylesheet" href="styles.css">
     <script src="./script.js" type="module"></script>
   </head>
