--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Prototypes</title>
-    <meta name="robots" content="noindex">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🪚</text></svg>">
-  </head>
-  <body>
-    <ul>
-      <li>Close Account <a href="close_account/v1">v1</a> <a href="close_account/v2">v2</a></li>
-      <li><a href="custom_exports/">Custom Exports</a></li>
-      <li>Filters <a href="filters/v1">v1</a> <a href="filters/v2">v2</a></li>
-      <li>Historical Rates <a href="historical_rates/v1">v1</a> <a href="historical_rates/v2">v2</a></li>
-      <li><a href="porchlight_grids/">Porchlight Grids</a></li>
-      <li><a href="preact_dnd/">Preact Drag N Drop</a></li>
-    </ul>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Prototypes</title>
+  <meta name="robots" content="noindex">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🪚</text></svg>">
+</head>
+
+<body>
+  <ul>
+    <li>Close Account <a href="close_account/v1">v1</a> <a href="close_account/v2">v2</a></li>
+    <li><a href="custom_exports/">Custom Exports</a></li>
+    <li>Filters <a href="filters/v1">v1</a> <a href="filters/v2">v2</a></li>
+    <li>Historical Rates <a href="historical_rates/v1">v1</a> <a href="historical_rates/v2">v2</a></li>
+    <li><a href="input_currency/">Input Currency</a></li>
+    <li><a href="porchlight_grids/">Porchlight Grids</a></li>
+    <li><a href="preact_dnd/">Preact Drag N Drop</a></li>
+  </ul>
+</body>
+
 </html>
